# cled

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.claude-plugin/: marketplace.json
docs/: index.html
plugin/.claude-plugin/: plugin.json
plugin/skills/cled/: SKILL.md
src/cled/: __init__.py  __main__.py  agent_tabs.py  cled.py  rgb.py
tests/: conftest.py  strategies.py  test_agent_tabs.py  test_cled.py  test_rgb.py
