[project]
name = "cled"
version = "0.1.0"
description = "CLED (Claude/Codex LED) — ambient keyboard daemon that maps your AI agents' status onto the keys via OpenRGB"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Nadav Bhonker" }]
dependencies = [
    "openrgb-python",
    "psutil",
]

[project.scripts]
cled = "cled.cled:main"

[dependency-groups]
dev = [
    "pytest",
    "hypothesis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cled"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
